--- a/m2/w2/d5/Homework-M2-W2-D5/package.json
+++ b/m2/w2/d5/Homework-M2-W2-D5/package.json
@@ -1,14 +1,15 @@
 {
   "name": "homework-m2-w2-d5",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass scss/custom.scss css/style.css -watch"
+    "compile:sass": "node-sass sass/custom.scss css/style.css -watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
